syntax = "proto3";
 
option java_package ="io.grpc.examples";
 
package user;

service Greeter {
    rpc RegisteredUser (RegisteredUserRequest) returns (RegisteredUserReply) {}
    rpc LoginUser(LoginUserRequest) returns (LoginUserReply) {}
}


message RegisteredUserRequest {
    string num=1;
    string password=2;
}


message RegisteredUserReply {
    bool result=1;
    string message=2;
}


message LoginUserRequest {
    string num=1;
    string password=2;
}


message LoginUserReply {
    bool result=1;
    string message=2;
}


